# agents-orchestration

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  STATUS.md  config.py  list_models.py  logger.py  main.py  pyproject.toml  requirements.txt  setup_db.py  state.py  test_google_api.py  test_google_structured_output.py  test_openrouter.py  test_structured_output.py
agents/: researcher.py  sql_queryer.py  supervisor.py  writer.py
scripts/: __init__.py  check_openrouter_api.py  check_openrouter_structured_output.py
tests/: test_integration.py  test_main.py  test_nodes.py  test_setup_db.py  test_supervisor.py
