[project]
name = "agents-orchestration"
version = "0.1.0"
description = "A hierarchical agent orchestration project using LangGraph and uv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
